[package]
name = "rust-http123-reverse-proxy"
version = "0.1.0"
edition = "2021"

[dependencies]
hyper = { version = "1", features = ["full"] }
tokio = { version = "1", features = ["full"] }
bytes = "1"
http = "1"
hyper-util = { version = "0.1.10", features = ["tokio", "server", "http1", "http2", "client-legacy", "client"] }
rustls = { version="0.23.16", features=["ring", "aws_lc_rs"] }
tokio-rustls = "0.26.0"
rustls-pemfile = "2"
http-body-util = "0.1"
pki-types = { package = "rustls-pki-types", version = "1" }
pretty_env_logger = "0.5"
h3 = { version="0.0.6", features = ["tracing"] }
h3-quinn = { version="0.0.7", features = ["tracing"] }
quinn = { version = "0.11", default-features = false, features = [
    "runtime-tokio",
    "rustls",
    "ring",
] }
rustls-native-certs = "0.8.0"
futures = "0.3.31"
hyper-tls = "0.6.0"

[profile.release]
codegen-units = 1
lto = "fat"
opt-level = "3"
panic = "abort"
codegen-units = 1

[build]
rustflags = ["-C", "target-cpu=native"]
